# robotics-workcell-optimizer

./: .gitignore  CLAUDE.md  README.md  claude_code_prompt_pack.md  package.json  pnpm-lock.yaml  render.yaml  vercel.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: cad.py  examples.py  extract.py  layout.py  optimize.py  score.py
backend/app/data/: robots.json
backend/app/data/examples/: beverage_eur.json  heavy_bag.json  mixed_sku.json
backend/app/data/sample_dxf/: README.md  complex_15x10.dxf  l_shape_10x10.dxf  medium_12x8.dxf  simple_8x6.dxf  tight_6x4.dxf
backend/app/prompts/: extract_spec.md
backend/app/schemas/: chat.py  layout.py  obstacle.py  robot.py  workcell.py
backend/app/services/: cad_import.py  catalog.py  extraction.py  layout.py  llm.py  optimizer.py  scoring.py
backend/scripts/: gen_sample_dxf.py
backend/tests/: test_cad.py  test_catalog.py  test_cpsat.py  test_layout.py  test_llm.py  test_multiarm.py  test_optimizer.py  test_schemas.py  test_scoring.py
backend/tests/fixtures/: ambiguous.txt  beverage_eur.txt  mixed_sku.txt
frontend/: package.json  tsconfig.app.json  vite.config.ts
frontend/public/models/: README.md
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/canvas/: CompareSheet.tsx  ConveyorShape.tsx  (+10 more)
frontend/src/data/: promptLibrary.ts
frontend/src/hooks/: useStageSize.ts
frontend/src/lib/: cycleAnimation.ts  geometry.ts  meshes.ts  stacking.ts  validation.ts
frontend/src/store/: layoutStore.ts
scripts/: dev.sh
(+8 files in other folders)
